--- a/src/main/resources/templates/home/index.vm
+++ b/src/main/resources/templates/home/index.vm
@@ -1,2 +1,13 @@
 #set($page_title="惠商机-首页")
-测试测试测试
+测试测试测试<br/>
+测试测试测试<br/>
+测试测试测试<br/>
+测试测试测试<br/>
+测试测试测试<br/>
+测试测试测试<br/>
+测试测试测试<br/>
+测试测试测试<br/>
+测试测试测试<br/>
+测试测试测试<br/>
+测试测试测试<br/>
+测试测试测试<br/>
