--- a/src/main/resources/templates/layout/common.vm
+++ b/src/main/resources/templates/layout/common.vm
@@ -1,6 +1,3 @@
-#set($DIST_JS_PATH="/dist/js")
-#set($DIST_CSS_PATH="/dist/css")
-#set($DIST_CSS_LIB="/dist/lib")
-#set($SRC_JS_PATH="/src/js")
-#set($SRC_CSS_PATH="/src/css")
-#set($SRC_CSS_LIB="/src/lib")
+#set($JS_PATH="/business/js")
+#set($CSS_PATH="/business/style")
+#set($IMAGE_PATH="/business/images")
