--- a/src/main/resources/templates/layout/css.vm
+++ b/src/main/resources/templates/layout/css.vm
@@ -1,2 +1,3 @@
-<link rel="stylesheet" href="https://cdn.bootcss.com/jquery-weui/1.2.0/css/jquery-weui.css">
-<link rel="stylesheet" href="https://cdn.bootcss.com/jquery-weui/1.2.0/css/jquery-weui.min.css">
+#parse("/templates/layout/common.vm")
+<link rel="stylesheet" href="$CSS_PATH/weui.css">
+<link rel="stylesheet" href="$CSS_PATH/business.css">
