--- a/src/main/resources/templates/layout/javascripts.vm
+++ b/src/main/resources/templates/layout/javascripts.vm
@@ -1,6 +1,3 @@
-<!-- body 最后 -->
-<script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
-<script src="https://cdn.bootcss.com/jquery-weui/1.2.0/js/jquery-weui.min.js"></script>
-<!-- 如果使用了某些拓展插件还需要额外的JS -->
-<script src="https://cdn.bootcss.com/jquery-weui/1.2.0/js/swiper.min.js"></script>
-<script src="https://cdn.bootcss.com/jquery-weui/1.2.0/js/city-picker.min.js"></script>
+#parse("/templates/layout/common.vm")
+<script src="$JS_PATH/zepto.min.js" type="text/javascript"></script>
+<script src="$JS_PATH/weui.js" type="text/javascript"></script>
