--- a/src/main/resources/static/style/business.css
+++ b/src/main/resources/static/style/business.css
@@ -1,4 +1,8 @@
-body, html, .container {
+body, html {
     height: 100%;
     -webkit-tap-highlight-color: transparent;
+}
+img.header_img{
+    width: 375px;
+    height: 155.27px;
 }
