--- a/src/main/resources/templates/layout/footer.vm
+++ b/src/main/resources/templates/layout/footer.vm
@@ -1,15 +1,15 @@
 #parse("/templates/layout/common.vm")
 <div class="weui-tabbar">
     <a href="javascript:;" class="weui-tabbar__item weui-bar__item_on">
-        <img src="$IMAGE_PATH/icon_tabbar.png" alt="" class="weui-tabbar__icon">
+        <img src="$IMAGE_PATH/weui/icon_tabbar.png" alt="" class="weui-tabbar__icon">
         <p class="weui-tabbar__label">首页</p>
     </a>
     <a href="javascript:;" class="weui-tabbar__item">
-        <img src="$IMAGE_PATH/icon_tabbar.png" alt="" class="weui-tabbar__icon">
-        <p class="weui-tabbar__label">订单</p>
+        <img src="$IMAGE_PATH/weui/icon_tabbar.png" alt="" class="weui-tabbar__icon">
+        <p class="weui-tabbar__label">我的商机</p>
     </a>
     <a href="javascript:;" class="weui-tabbar__item">
-        <img src="$IMAGE_PATH/icon_tabbar.png" alt="" class="weui-tabbar__icon">
-        <p class="weui-tabbar__label">我们</p>
+        <img src="$IMAGE_PATH/weui/icon_tabbar.png" alt="" class="weui-tabbar__icon">
+        <p class="weui-tabbar__label">关于我们</p>
     </a>
 </div>
