--- a/src/main/resources/templates/home/index.vm
+++ b/src/main/resources/templates/home/index.vm
@@ -1,5 +1,6 @@
 #set($page_title="惠商机-首页")
 #parse("/templates/layout/common.vm")
+<div class="weui-cells__title">商机服务，点击进入相关功能</div>
 <div class="weui-grids">
     <a href="javascript:;" class="weui-grid">
         <div class="weui-grid__icon">
