--- a/src/main/resources/templates/layout/javascripts.vm
+++ b/src/main/resources/templates/layout/javascripts.vm
@@ -1,3 +1,5 @@
 #parse("/templates/layout/common.vm")
-<script src="$JS_PATH/zepto.min.js" type="text/javascript"></script>
-<script src="$JS_PATH/weui.js" type="text/javascript"></script>
+<script src="$Lib_PATH/jquery-2.1.4.js" type="text/javascript"></script>
+<script src="$Lib_PATH/fastclick.js" type="text/javascript"></script>
+<script src="$JS_PATH/jquery-weui.js" type="text/javascript"></script>
+<script src="$JS_PATH/swiper.js" type="text/javascript"></script>
