--- a/src/main/resources/templates/layout/layout_list.vm
+++ b/src/main/resources/templates/layout/layout_list.vm
@@ -4,8 +4,10 @@
     <meta name="viewport" content="width=device-width"/>
     <title>${page_title}</title>
     #parse("/templates/layout/common.vm")
-    #parse("/templates/layout/css.vm")
-    #parse("/templates/layout/javascripts.vm")
+    <link rel="stylesheet" href="$LIB_PATH/weui.css">
+    <link rel="stylesheet" href="$CSS_PATH/jquery-weui.css">
+    <link rel="stylesheet" href="$CSS_PATH/business.css">
+    <link rel="stylesheet" href="$CSS_PATH/style.css">
 </head>
 <body ontouchstart>
 <div class="page">
@@ -29,8 +31,26 @@
         $screen_content
     </div>
     <div class="page-ft">
-        #parse("/templates/layout/footer.vm")
+        <div class="weui-tabbar wy-foot-menu">
+            <a href="javascript:;" class="weui-tabbar__item weui-bar__item_on">
+                <div class="weui-tabbar__icon  foot-menu-home"></div>
+                <p class="weui-tabbar__label">首页</p>
+            </a>
+            <a href="javascript:;" class="weui-tabbar__item">
+                <div class="weui-tabbar__icon foot-menu-cart"></div>
+                <p class="weui-tabbar__label">我的商机</p>
+            </a>
+            <a href="javascript:;" class="weui-tabbar__item">
+                <div class="weui-tabbar__icon foot-menu-member"></div>
+                <p class="weui-tabbar__label">关于我们</p>
+            </a>
+        </div>
     </div>
 </div>
+
+<script src="$Lib_PATH/jquery-2.1.4.js" type="text/javascript"></script>
+<script src="$JS_PATH/jquery-weui.js" type="text/javascript"></script>
+<script src="$JS_PATH/swiper.js" type="text/javascript"></script>
+<script src="$Lib_PATH/fastclick.js" type="text/javascript"></script>
 </body>
 </html>
