--- a/src/main/resources/templates/layout/layout.vm
+++ b/src/main/resources/templates/layout/layout.vm
@@ -45,10 +45,10 @@
         <p class="weui-tabbar__label">关于我们</p>
     </a>
 </div>
-<script src="$Lib_PATH/jquery-2.1.4.js" type="text/javascript"></script>
+<script src="$LIB_PATH/jquery-2.1.4.js" type="text/javascript"></script>
 <script src="$JS_PATH/jquery-weui.js" type="text/javascript"></script>
 <script src="$JS_PATH/swiper.js" type="text/javascript"></script>
-<script src="$Lib_PATH/fastclick.js" type="text/javascript"></script>
+<script src="$LIB_PATH/fastclick.js" type="text/javascript"></script>
 <script type="text/javascript">
     $(".swiper-banner").swiper({
         loop: true,
