--- a/src/main/resources/templates/layout/layout.vm
+++ b/src/main/resources/templates/layout/layout.vm
@@ -36,6 +36,10 @@
         <div class="weui-tabbar__icon  foot-menu-home"></div>
         <p class="weui-tabbar__label">首页</p>
     </a>
+    <a href="classify.html" class="weui-tabbar__item">
+        <div class="weui-tabbar__icon foot-menu-list"></div>
+        <p class="weui-tabbar__label">商机中心</p>
+    </a>
     <a href="javascript:;" class="weui-tabbar__item">
         <div class="weui-tabbar__icon foot-menu-cart"></div>
         <p class="weui-tabbar__label">我的商机</p>
