--- a/src/main/resources/templates/layout/layout_list.vm
+++ b/src/main/resources/templates/layout/layout_list.vm
@@ -10,47 +10,54 @@
     <link rel="stylesheet" href="$CSS_PATH/style.css">
 </head>
 <body ontouchstart>
-<div class="page">
-    <div class="page-hd">
-        <div class="weui-search-bar" id="searchBar">
-            <form class="weui-search-bar__form">
-                <div class="weui-search-bar__box">
-                    <i class="weui-icon-search"></i>
-                    <input type="search" class="weui-search-bar__input" id="searchInput" placeholder="搜索" required="">
-                    <a href="javascript:" class="weui-icon-clear" id="searchClear"></a>
-                </div>
-                <label class="weui-search-bar__label" id="searchText" style="transform-origin: 0px 0px 0px; opacity: 1; transform: scale(1, 1);">
-                    <i class="weui-icon-search"></i>
-                    <span>搜索</span>
-                </label>
-            </form>
-            <a href="javascript:" class="weui-search-bar__cancel-btn" id="searchCancel">取消</a>
+<!--顶部搜索-->
+<header class="weui-header">
+    <!--顶部轮播-->
+    <div class="swiper-container swiper-banner">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide"><a href="pro_info.html"><img src="$IMAGE_PATH/web/banner.jpg"/></a></div>
+            <div class="swiper-slide"><a href="pro_list.html"><img src="$IMAGE_PATH/web/banner.jpg"/></a></div>
+            <div class="swiper-slide"><a href="pro_info.html"><img src="$IMAGE_PATH/web/banner.jpg"/></a></div>
+            <div class="swiper-slide"><a href="pro_list.html"><img src="$IMAGE_PATH/web/banner.jpg"/></a></div>
         </div>
+        <div class="swiper-pagination"></div>
     </div>
-    <div class="page-bd">
-        $screen_content
-    </div>
-    <div class="page-ft">
-        <div class="weui-tabbar wy-foot-menu">
-            <a href="javascript:;" class="weui-tabbar__item weui-bar__item_on">
-                <div class="weui-tabbar__icon  foot-menu-home"></div>
-                <p class="weui-tabbar__label">首页</p>
-            </a>
-            <a href="javascript:;" class="weui-tabbar__item">
-                <div class="weui-tabbar__icon foot-menu-cart"></div>
-                <p class="weui-tabbar__label">我的商机</p>
-            </a>
-            <a href="javascript:;" class="weui-tabbar__item">
-                <div class="weui-tabbar__icon foot-menu-member"></div>
-                <p class="weui-tabbar__label">关于我们</p>
-            </a>
-        </div>
-    </div>
+</header>
+
+<!--主体-->
+<div class="weui-content">
+    $screen_content
 </div>
 
-<script src="$Lib_PATH/jquery-2.1.4.js" type="text/javascript"></script>
+<!--底部导航-->
+<div class="foot-black"></div>
+<div class="weui-tabbar wy-foot-menu">
+    <a href="javascript:;" class="weui-tabbar__item weui-bar__item_on">
+        <div class="weui-tabbar__icon  foot-menu-home"></div>
+        <p class="weui-tabbar__label">首页</p>
+    </a>
+    <a href="classify.html" class="weui-tabbar__item">
+        <div class="weui-tabbar__icon foot-menu-list"></div>
+        <p class="weui-tabbar__label">商机中心</p>
+    </a>
+    <a href="javascript:;" class="weui-tabbar__item">
+        <div class="weui-tabbar__icon foot-menu-cart"></div>
+        <p class="weui-tabbar__label">我的商机</p>
+    </a>
+    <a href="javascript:;" class="weui-tabbar__item">
+        <div class="weui-tabbar__icon foot-menu-member"></div>
+        <p class="weui-tabbar__label">关于我们</p>
+    </a>
+</div>
+<script src="$LIB_PATH/jquery-2.1.4.js" type="text/javascript"></script>
 <script src="$JS_PATH/jquery-weui.js" type="text/javascript"></script>
 <script src="$JS_PATH/swiper.js" type="text/javascript"></script>
-<script src="$Lib_PATH/fastclick.js" type="text/javascript"></script>
+<script src="$LIB_PATH/fastclick.js" type="text/javascript"></script>
+<script type="text/javascript">
+    $(".swiper-banner").swiper({
+        loop: true,
+        autoplay: 3000
+    });
+</script>
 </body>
 </html>
