--- a/src/main/resources/templates/login/login.vm
+++ b/src/main/resources/templates/login/login.vm
@@ -1,1 +1,31 @@
-$screen_content
+#set($layout="/templates/layout/layout_login.vm")
+#set($page_title="惠商机-登录")
+#parse("/templates/layout/common.vm")
+
+<!--主体-->
+<div class="login-box">
+    <div class="lg-title">欢迎登录惠商机</div>
+    <div class="login-form">
+        <form action="#">
+            <div class="login-user-name common-div">
+            	<span class="eamil-icon common-icon">
+                	<img src="$IMAGE_PATH/web/eamil.png" />
+                </span>
+                <input type="email" name="username" value="" placeholder="请输入您的手机号" />
+            </div>
+            <div class="login-user-pasw common-div">
+            	<span class="pasw-icon common-icon">
+                	<img src="$IMAGE_PATH/web/password.png" />
+                </span>
+                <input type="password" name="password" value="" placeholder="请输入您的密码" />
+            </div>
+            <a href="javascript:;" class="login-btn common-div">登陆</a>
+            <a href="javascript:;" class="login-oth-btn common-div">微信登陆</a>
+        </form>
+    </div>
+    <div class="forgets">
+        <a href="/login/change">忘记密码？</a>
+        <a href="/login/regist">免费注册</a>
+    </div>
+</div>
+
