--- a/src/main/resources/templates/layout/layout.vm
+++ b/src/main/resources/templates/layout/layout.vm
@@ -32,11 +32,11 @@
 <!--底部导航-->
 <div class="foot-black"></div>
 <div class="weui-tabbar wy-foot-menu">
-    <a href="javascript:;" class="weui-tabbar__item weui-bar__item_on">
+    <a href="/business/home/index" class="weui-tabbar__item weui-bar__item_on">
         <div class="weui-tabbar__icon  foot-menu-home"></div>
         <p class="weui-tabbar__label">首页</p>
     </a>
-    <a href="classify.html" class="weui-tabbar__item">
+    <a href="javascript:;" class="weui-tabbar__item">
         <div class="weui-tabbar__icon foot-menu-list"></div>
         <p class="weui-tabbar__label">商机中心</p>
     </a>
@@ -44,7 +44,7 @@
         <div class="weui-tabbar__icon foot-menu-cart"></div>
         <p class="weui-tabbar__label">我的商机</p>
     </a>
-    <a href="javascript:;" class="weui-tabbar__item">
+    <a href="/business/my/mine" class="weui-tabbar__item">
         <div class="weui-tabbar__icon foot-menu-member"></div>
         <p class="weui-tabbar__label">关于我们</p>
     </a>
