--- a/src/main/resources/templates/layout/footer.vm
+++ b/src/main/resources/templates/layout/footer.vm
@@ -1,1 +1,49 @@
-#parse("/templates/layout/common.vm")
+<div class="foot-black"></div>
+<div class="weui-tabbar wy-foot-menu">
+    <a href="/business/home/index" class="weui-tabbar__item weui-bar__item_on" id="firstMenu">
+        <div class="weui-tabbar__icon  foot-menu-home"></div>
+        <p class="weui-tabbar__label">首页</p>
+    </a>
+    <a href="/business/fang/list" class="weui-tabbar__item" id="secMenu">
+        <div class="weui-tabbar__icon foot-menu-list"></div>
+        <p class="weui-tabbar__label">商机中心</p>
+    </a>
+    <a href="javascript:;" class="weui-tabbar__item" id="threeMenu">
+        <div class="weui-tabbar__icon foot-menu-cart"></div>
+        <p class="weui-tabbar__label">我的订阅</p>
+    </a>
+    <a href="/business/my/mine" class="weui-tabbar__item" id="fourMenu">
+        <div class="weui-tabbar__icon foot-menu-member"></div>
+        <p class="weui-tabbar__label">我的</p>
+    </a>
+</div>
+
+<script>
+    $(function(){
+        function initMenu(){
+            var strUrl = window.location.href;
+            if(strUrl.indexOf("/home") > -1){
+                activeMenu("firstMenu");
+            }else if(strUrl.indexOf("/fang") > -1){
+                activeMenu("secMenu");
+            }else if(strUrl.indexOf("/fang") > -1){
+                activeMenu("secMenu");
+            }else if(strUrl.indexOf("/my") > -1){
+                activeMenu("fourMenu");
+            }
+        }
+
+        function activeMenu(menu){
+            var menuArr = ["firstMenu", "secMenu", "threeMenu", "fourMenu"];
+            $.each(menuArr, function(index, obj){
+                if(menu == obj){
+                    $("#"+obj).addClass("weui-bar__item_on");
+                }else{
+                    $("#"+obj).removeClass("weui-bar__item_on");
+                }
+            });
+        }
+
+        initMenu();
+    });
+</script>
